# meteo-map-lab

./: .dockerignore  .gitignore  Makefile  README-instructions.md  README.md  meteo-map-lab.code-workspace  package-lock.json
backend/: .env.example  Dockerfile  Dockerfile.prod  entrypoint.sh  litestream.yml  openapi.json  pyproject.toml
backend/app/: dto.py  main.py  models.py
backend/app/api/: routes.py
backend/app/core/: config.py  http.py  logging.py  trace.py
backend/app/db/: session.py
backend/app/repositories/: base.py  lightning_base.py  lightning_sqlite.py  sqlite.py
backend/app/schemas/: cache.py  cloud_cover.py  health.py  lightning.py  lightning_risk.py  metrics.py
backend/app/services/: aggregate.py  cloud_cover.py  combine.py  geo.py  lightning.py  lightning_aggregate.py  lightning_client.py  lightning_parse.py  (+5 more)
backend/scripts/: export_openapi.py  ingest_lightning.py
backend/tests/: conftest.py  test_aggregate.py  test_aggregate_in_db.py  test_cache_endpoint.py  test_cloud_cover_endpoint.py  test_cloud_cover_service.py  test_combine.py  test_config.py  test_cors.py  test_db_pragmas.py  test_geo.py  test_health.py  test_lightning_aggregate.py  test_lightning_client.py  test_lightning_endpoint.py  test_lightning_parse.py  test_lightning_repository.py  test_lightning_risk.py  test_lightning_risk_endpoint.py  test_lightning_service.py  test_logging.py  test_models.py  test_outbound_logging.py  test_parameters.py  test_repository.py  test_request_timing.py  test_smhi_client.py  test_smhi_parse.py  test_timebuckets.py  test_trace_correlation.py
(+80 files in other folders)
