[project]
name = "elvy-map-backend"
version = "0.1.0"
description = "elvy-map FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "sqlmodel>=0.0.22",
]

[dependency-groups]
dev = [
    "pylint>=3.3",
    "pytest>=8.3",
    "ruff>=0.8",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100

[tool.pylint.format]
max-line-length = 100

[tool.pylint.messages_control]
disable = [
    "missing-class-docstring",     # C0115
    "missing-function-docstring",  # C0116
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
